--- a/sensors/legacy_sensors.yaml
+++ b/sensors/legacy_sensors.yaml
@@ -474,3 +474,11 @@
     hours: 24
   sampling_size: 1000  # High sampling size for accuracy
   precision: 1
+
+- platform: statistics
+  name: "Daily Average Temperature"
+  unique_id: "daily_average_temperature"
+  entity_id: sensor.gw2000b_outdoor_temperature # Replace with your sensor entity
+  state_characteristic: mean
+  max_age:
+    days: 1
