--- a/sensors/template/solar_sensors.yaml
+++ b/sensors/template/solar_sensors.yaml
@@ -1,22 +1,23 @@
 
 
 - sensor:
-
     - name: "envoy_lifetime_energy_consumption_kwh"
       unique_id: "envoy_lifetime_energy_consumption_kwh"        
       unit_of_measurement: "kWh"
-      state_class: measurement
+      state_class: total_increasing
+      device_class: energy
       icon: mdi:lightning-bolt-circle
       state: >
         {% set mwh = states('sensor.envoy_202425002148_lifetime_energy_consumption') | float(0) %}
-        {{ (mwh / 1000.0) }}
+        {{ (mwh * 1000.0 | round(4) ) }}
 
     - name: "envoy_lifetime_energy_production_kwh"
       unique_id: "envoy_lifetime_energy_production_kwh"        
       unit_of_measurement: "kWh"
-      state_class: measurement
+      state_class: total_increasing
+      device_class: energy
       icon: mdi:lightning-bolt-circle
       state: >
         {% set mwh = states('sensor.envoy_202425002148_lifetime_energy_production') | float(0) %}
-        {{ (mwh / 1000.0 ) | float }}
+        {{ (mwh * 1000.0 ) | round(4) }}
         
